<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/endWorkTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startWorkTimeEditText" />

    <TextView
        android:id="@+id/startWorkTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dispWorkTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dispStartTimeToday"
        app:layout_constraintEnd_toStartOf="@+id/startWorkTimeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkResiduePaidHolidaysTextView" />

    <TextView
        android:id="@+id/dispEndWorkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dispEndTimeToday"
        app:layout_constraintEnd_toStartOf="@+id/endWorkTimeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dispWorkTimeStart" />

    <TextView
        android:id="@+id/checkResiduePaidHolidaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/checkResiduePaidHolidays"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startWorkTimeEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/checkResiduePaidHolidays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/startWorkTimeEditText"
        app:layout_constraintEnd_toStartOf="@+id/checkResiduePaidHolidaysTextView"
        app:srcCompat="@drawable/ic_check_box_black_24dp" />

    <ImageView
        android:id="@+id/checkCompensatoryDayOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/startWorkTimeEditText"
        app:layout_constraintStart_toEndOf="@+id/checkResiduePaidHolidaysTextView"
        app:srcCompat="@drawable/ic_check_box_black_24dp" />

    <TextView
        android:id="@+id/checkCompensatoryDayOffTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/checkCompensatoryDayOff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startWorkTimeEditText"
        app:layout_constraintStart_toEndOf="@+id/checkCompensatoryDayOff" />

</androidx.constraintlayout.widget.ConstraintLayout>